Formulaire d'ajout d'un nouveau collaborateur est fonctionnel

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,12 +8,20 @@
 		<servlet-class>dev.sgp.web.ListerCollaborateursController</servlet-class>
 	</servlet>
 	<servlet>
+        <servlet-name>AjouterCollaborateursController</servlet-name>
+        <servlet-class>dev.sgp.web.AjouterCollaborateursController</servlet-class>
+    </servlet>
+	<servlet>
         <servlet-name>EditerCollaborateurController</servlet-name>
         <servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>
     </servlet>
 	<servlet-mapping>
         <servlet-name>ListerCollaborateursController</servlet-name>
         <url-pattern>/collaborateurs/lister</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AjouterCollaborateursController</servlet-name>
+        <url-pattern>/collaborateurs/nouveau</url-pattern>
     </servlet-mapping>
 	<servlet-mapping>
         <servlet-name>EditerCollaborateurController</servlet-name>
