--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,9 @@
 		<servlet-class>dev.sgp.web.ListerCollaborateursController</servlet-class>
 	</servlet>
 	<servlet>
-        <servlet-name>StatistiquesController</servlet-name>
-        <servlet-class>dev.sgp.web.StatistiquesController</servlet-class>
-    </servlet>
+		<servlet-name>StatistiquesController</servlet-name>
+		<servlet-class>dev.sgp.web.StatistiquesController</servlet-class>
+	</servlet>
 	<servlet>
 		<servlet-name>AjouterCollaborateursController</servlet-name>
 		<servlet-class>dev.sgp.web.AjouterCollaborateursController</servlet-class>
@@ -32,7 +32,15 @@
 		<url-pattern>/collaborateurs/editer</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-        <servlet-name>StatistiquesController</servlet-name>
-        <url-pattern>/collaborateurs/statistiques</url-pattern>
-    </servlet-mapping>
+		<servlet-name>StatistiquesController</servlet-name>
+		<url-pattern>/collaborateurs/statistiques</url-pattern>
+	</servlet-mapping>
+	<filter>
+		<filter-name>FrequentationFilter</filter-name>
+		<filter-class>dev.sgp.filtre.FrequentationFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>FrequentationFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
